test(billing): keep stale recovery test Java compatible